<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_LAB_OuterData" Id="{f0cd4794-bc66-4d38-98af-c1f6060b21ba}">
    <Declaration><![CDATA[TYPE ST_LAB_OuterData :
STRUCT
	sOuterCode			: T_MaxString;
	nOutersStatus		: INT;
	nOuterRejectID		: UINT;
	
	aPacks				: ARRAY[1..3] OF ST_LAB_PackData;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>